--- a/IO_TCPServer_API/IO_TCPServer_API.csproj
+++ b/IO_TCPServer_API/IO_TCPServer_API.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleLogger.cs" />
+    <Compile Include="TextProtocol.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleTCPServer.cs" />
   </ItemGroup>
