--- a/IO_TCPServer_SocketInfo/IO_TCPServer.csproj
+++ b/IO_TCPServer_SocketInfo/IO_TCPServer.csproj
@@ -68,12 +68,16 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Wymagania serwera.docx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IO_TCPServer_API\IO_TCPServer_API.csproj">
       <Project>{930cdd0e-f382-48d8-9388-3eaae3c93fb4}</Project>
       <Name>IO_TCPServer_API</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Diagram UML.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
