--- a/IO_TCPServer_API/packages.config
+++ b/IO_TCPServer_API/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.3.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net461" />
+  <package id="SQLite" version="3.13.0" targetFramework="net461" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.113.6" targetFramework="net461" />
