--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -3,7 +3,10 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.1.0" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.1.0" targetFramework="net472" />
+  <package id="SQLite" version="3.13.0" targetFramework="net472" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.113.6" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
