--- a/IO_TCPServer_SocketInfo/IO_TCPServer.csproj
+++ b/IO_TCPServer_SocketInfo/IO_TCPServer.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="DiagramKlas.cd" />
     <None Include="packages.config" />
     <None Include="Wymagania serwera.docx" />
   </ItemGroup>
