Project dependencies and references fix
- added and injected missing JsonProtocol project configuration, files and references
- project reference paths fixed to relative
- changed JsonProtocol and Tests .Net Framework version from 4.7.2 to 4.6.1
- deleted unused client fields (request and bytesRead)

--- a/Client_WinForms/Client_WinForms.csproj
+++ b/Client_WinForms/Client_WinForms.csproj
@@ -113,7 +113,7 @@
       <Project>{75b53a40-8c08-4701-a6b6-859250d92441}</Project>
       <Name>IO_TCPClient_API</Name>
     </ProjectReference>
-    <ProjectReference Include="C:\Users\Michal\Desktop\JsonProtocol\JsonProtocol.csproj">
+    <ProjectReference Include="..\JsonProtocol\JsonProtocol.csproj">
       <Project>{2f68869e-b362-4173-9b16-54b9b45b23e6}</Project>
       <Name>JsonProtocol</Name>
     </ProjectReference>
