--- a/IO_TCPClient_API/IO_TCPClient_API.csproj
+++ b/IO_TCPClient_API/IO_TCPClient_API.csproj
@@ -78,7 +78,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="C:\Users\Michal\Desktop\JsonProtocol\JsonProtocol.csproj">
+    <ProjectReference Include="..\IO_TCPServer_API\IO_TCPServer_API.csproj">
+      <Project>{930cdd0e-f382-48d8-9388-3eaae3c93fb4}</Project>
+      <Name>IO_TCPServer_API</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\JsonProtocol\JsonProtocol.csproj">
       <Project>{2f68869e-b362-4173-9b16-54b9b45b23e6}</Project>
       <Name>JsonProtocol</Name>
     </ProjectReference>
