--- a/IO_TCPServer_SocketInfo/IO_TCPServer.csproj
+++ b/IO_TCPServer_SocketInfo/IO_TCPServer.csproj
@@ -98,7 +98,7 @@
     <None Include="App.config" />
     <None Include="DiagramKlas.cd" />
     <None Include="packages.config" />
-    <None Include="Wymagania serwera.docx" />
+    <None Include="Wymagania_serwera.pdf" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IO_TCPServer_API\IO_TCPServer_API.csproj">
@@ -107,7 +107,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Diagram UML.png" />
+    <Content Include="Diagram_przypadkow.png" />
+    <Content Include="Diagram_sekwencji.png" />
+    <Content Include="Diagram_wdrozenia.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
